Created nested section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
         <li></li>
         <li></li>
     </ul>
+    <section>
+        <article>
+            <p></p>
+            <p></p>
+            <p></p>
+        </article>
+    </section>
 </body>
 </html>
