Created multiple articles

--- a/index.html
+++ b/index.html
@@ -27,5 +27,23 @@
             <p></p>
         </article>
     </section>
+
+    <section>
+        <article>
+            <p></p>
+            <p></p>
+            <p></p>
+        </article>
+        <article>
+            <p></p>
+            <p></p>
+            <p></p>
+        </article>
+        <article>
+            <p></p>
+            <p></p>
+            <p></p>
+        </article>
+    </section>
 </body>
 </html>
